# Processedge-POSNext-override

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
processedge_posnext_override/: api.py  hooks.py  install.py  patches.txt
processedge_posnext_override/config/: desktop.py
processedge_posnext_override/doctype/processedge_posnext_settings/: processedge_posnext_settings.json
processedge_posnext_override/overrides/: pos_settings.py  sales_invoice.py
processedge_posnext_override/processedge_posnext_override/: hooks.py  modules.txt
processedge_posnext_override/processedge_posnext_override/doctype/processedge_posnext_settings/: processedge_posnext_settings.json  processedge_posnext_settings.py
processedge_posnext_override/processedge_posnext_override/report/pos_closing_variance_vs_expenses/: pos_closing_variance_vs_expenses.js  pos_closing_variance_vs_expenses.json  pos_closing_variance_vs_expenses.py
processedge_posnext_override/public/js/: processedge_posnext_override.bundle.js  processedge_posnext_override.js
processedge_posnext_override/tests/: test_pos_settings_override.py
